--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
-    <title>Document</title>
+    <title>Cine Riwi</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <h1>Riwi Cine</h1>
+        <nav>
+            <a href="#estreno">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-film" viewBox="0 0 16 16">
+                    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm4 0v6h8V1zm8 8H4v6h8zM1 1v2h2V1zm2 3H1v2h2zM1 7v2h2V7zm2 3H1v2h2zm-2 3v2h2v-2zM15 1h-2v2h2zm-2 3v2h2V4zm2 3h-2v2h2zm-2 3v2h2v-2zm2 3h-2v2h2z"/>
+                  </svg> Estreno
+            </a>
+            <a href="cartelera">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"/>
+                </svg>
+                Cartelera
+            </a>
+            <a href="contacto"> 
+                
+                contacto</a>
+        </nav>
+    </header>
+    <main>
+        <section id="estreno">
+            <h2>Estrenos</h2>
+        </section>
+        <section id="cartelera">
+            <h2>Cartelera</h2>
+        </section>
+        <section id="contacto">
+            <h2></h2>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
