Avances completos apartado de cartelera

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
+    <meta name="description"
+        content="Explora nuestra emocionante cartelera de cine con los últimos estrenos, horarios de proyección, críticas y más. ¡Compra tus entradas y reserva tus asientos para disfrutar de las mejores películas en pantalla grande!" />
+    <meta name="keywords"
+        content="Películas, Cartelera, Cine, Estrenos, Proyecciones, Horarios, Taquilla, Reservas, Géneros, Críticas">
+    <meta name="sitedomain" content="https://example.com/" />
+    <meta name="organization" content="organizacion" />
+    <meta name="author" content="Santiago Castro Giraldo" />
+    <meta name="designer" content="Santiago Castro Giraldo" />
+    <meta name="copyright" content="© 2024 Riwi Cine. Todos los derechos reservados">
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow" />
+    <meta name="revisit-after" content="15days" />
     <title>Cine Riwi</title>
 </head>
 <body>
@@ -20,28 +32,36 @@
             </a>
             <a href="#contacto"> 
                 <i class="bi bi-envelope"></i>                
-                <span>contacto</span> </a>
+                <span>Contacto</span> </a>
         </nav>
     </header>
     <main>
         <section id="estreno" tabindex="1">
             <h2>Estrenos</h2>
                 <figure class="img-portada-estrenos">
-                    <img  class="img-portadas"  src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="">
-                    <img class="img-portadas"  src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="">
-                    <img  class="img-portadas" src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="">
-                    <img class="img-portadas" src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="">
+                    <img  class="img-portadas"  src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="Cabrini: la patrona de los inmigrantes">
+                    <img class="img-portadas"  src="https://es.web.img3.acsta.net/pictures/16/03/31/12/59/074144.jpg" alt="Warcraft: el primer encuentro de dos mundos">
+                    <img  class="img-portadas" src="https://es.web.img3.acsta.net/pictures/16/11/15/14/55/461730.jpg" alt="Assassin's Creed">
+                    <img class="img-portadas" src="https://archivos-cms.cinecolombia.com/images/_aliases/exhibition_poster/5/3/9/7/47935-1-esl-CO/ff0c6241d128-2_poster_480x670.png" alt="">
                 </figure>
                 
         </section>
         <section id="cartelera" tabindex="2">
             <h2>Cartelera</h2>
             <div class="elementos-fexibles">
-                
+                <figure class="img-hijo-pelicula-cambio">
+                    <img    src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="Cabrini: la patrona de los inmigrantes">
+                    <figcaption>
+                        <h3>Cabrini</h3>
+                        <h4>Alejandro Gómez Monteverde</h4>
+                        <h5>drama, biografia</h5>
+                        <button onclick="">Comprar</button>
+                    </figcaption>
+                </figure>                
             </div>
         </section>
         <section id="contacto" tabindex="3">
-            <h2>contacto</h2>
+            <h2>Contacto</h2>
         </section>
     </main>
     <footer></footer>
