--- a/index.html
+++ b/index.html
@@ -48,22 +48,73 @@
         </section>
         <section id="cartelera" tabindex="2">
             <h2>Cartelera</h2>
-            <div class="elementos-fexibles">
-                <figure class="img-hijo-pelicula-cambio">
-                    <img    src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="Cabrini: la patrona de los inmigrantes">
+            <div class="colec-cart-peliculas">
+                <figure class="fig-hijo-pelicula-cambio">
+                    <img  class="img-cartelera"   src="https://archivos-cms.cinecolombia.com/images/9/6/8/6/56869-1-esl-CO/a7cb08cfbf37-2_poster_480x670.png" alt="Cabrini: la patrona de los inmigrantes">
                     <figcaption>
                         <h3>Cabrini</h3>
                         <h4>Alejandro Gómez Monteverde</h4>
                         <h5>drama, biografia</h5>
-                        <button onclick="">Comprar</button>
+                        <a href="https://www.bancolombia.com/personas" target="_blank"><button onclick=""><i class="bi bi-cart"></i> Comprar</button></a>
                     </figcaption>
-                </figure>                
+                </figure> 
+                <figure class="fig-hijo-pelicula-cambio">
+                    <img  class="img-cartelera" src="https://pbs.twimg.com/media/GJONHd0WYAA9aaI.jpg:large" alt="El niño y la garza">
+                    <figcaption>
+                        <h3>El niño y la garza</h3>
+                        <h4>Hayao Miyazaki</h4>
+                        <h5>Fantasia, Aventura</h5>
+                        <a href="https://www.bancolombia.com/personas" target="_blank"><button onclick=""><i class="bi bi-cart"></i> Comprar</button></a>
+                    </figcaption>
+                </figure>
+                <figure class="fig-hijo-pelicula-cambio">
+                    <img  class="img-cartelera" src="https://es.web.img3.acsta.net/pictures/16/03/31/12/59/074144.jpg" alt="Warcraft: el primer encuentro de dos mundos">
+                    <figcaption>
+                        <h3>Warcraft</h3>
+                        <h4>Duncan Jones</h4>
+                        <h5>Fantasia, Aventura</h5>
+                        <a href="https://www.bancolombia.com/personas" target="_blank"><button onclick=""><i class="bi bi-cart"></i> Comprar</button></a>
+                    </figcaption>
+                </figure>              
+                <figure class="fig-hijo-pelicula-cambio">
+                    <img  class="img-cartelera" src="https://m.media-amazon.com/images/M/MV5BMDliOTIzNmUtOTllOC00NDU3LWFiNjYtMGM0NDc1YTMxNjYxXkEyXkFqcGdeQXVyNTM3NzExMDQ@._V1_.jpg" alt="Big hero 6">
+                    <figcaption>
+                        <h3>Big Hero 6</h3>
+                        <h4>Don Hall</h4>
+                        <h5>Roots, Fantasia</h5>
+                        <a href="https://www.bancolombia.com/personas" target="_blank"><button onclick=""><i class="bi bi-cart"></i> Comprar</button></a>
+                    </figcaption>
+                </figure>         
+                <figure class="fig-hijo-pelicula-cambio">
+                    <img  class="img-cartelera" src="https://pics.filmaffinity.com/Shrek-903764423-large.jpg" alt="Shrek">
+                    <figcaption>
+                        <h3>Shrek</h3>
+                        <h4>Andrew Adamson</h4>
+                        <h5>Fantasia, comedia</h5>
+                        <a href="https://www.bancolombia.com/personas" target="_blank"><button onclick=""><i class="bi bi-cart"></i> Comprar</button></a>
+                    </figcaption>
+                </figure>          
             </div>
         </section>
         <section id="contacto" tabindex="3">
             <h2>Contacto</h2>
+            <div>
+                <form id="form-contac-mail" action="/" method="post">
+                    <label for="mail">Correo: </label>
+                    <input id="mail" type="email" placeholder="ejemplo@correo.com">
+                    <label for="motivo">Asunto: </label>
+                    <input id="motivo" type="text">
+                    <label for="content"></label>
+                    <textarea name="" id="content" cols="30" rows="10"></textarea>
+                    <input id="btn-Enviar" type="button" value="Enviar">
+                </form>
+            </div>
+            
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy; 2024 Riwi Cine. Todos los derechos reservados</p>
+
+    </footer>
 </body>
 </html>
